# neuro

./: CMakeLists.txt  bju_calories_regression_with_names.csv  bridge.cpp  bridge.h  main.cpp
gui/: package-lock.json  package.json  vite.config.ts
gui/src/: App.module.css  App.tsx  index.css  main.tsx  types.ts
gui/src/api/: datasetAPI.ts
gui/src/components/AvailableDatasets/: AvailableDatasets.module.css  index.tsx
gui/src/components/DatasetViewer/: DatasetViewer.module.css  index.tsx
gui/src/components/LoadedDatasets/: LoadedDatasets.module.css  index.tsx
gui/src/components/ui/Button/: Button.module.css  index.tsx
gui/src/components/ui/Card/: Card.module.css  index.tsx
gui/src/components/ui/ContextMenu/: ContextMenu.module.css  index.tsx
gui/src/components/ui/Loader/: Loader.module.css  index.tsx
gui/src/context/: LocalizationContext.tsx
gui/src/hooks/: useDatasets.ts
gui/src/localization/: locales.ts
src/: Layer.cppm  Model.cppm  Model.hpp  Network.cppm  Neuron.cppm
src/model-parts/: ActivationPolicies.cppm  ActivationPolicies.hpp  Layer.hpp  Network.cppm  Network.hpp  Neuron.cppm  Neuron.hpp  Parser.cppm  Parser.hpp
src/service/: DatasetService.cpp  DatasetService.h  DatasetService.hpp  TransformationService.cpp  TransformationService.hpp
src/util/: Normalizer.cppm  Normalizer.hpp  colors.hpp  constants.cppm  constants.hpp  eigen_types.hpp  logging.hpp  platform_specific.cppm  types.cppm  types.hpp
src/util/model/: Model.hpp  Normalizer.hpp  Parser.hpp
src/util/model/model-parts/: ActivationPolicies.hpp  ComputePolicies.h  Layer.hpp  LossPolicies.hpp  Metrics.hpp  Network.hpp
src/util/types/: eigen_types.hpp
src/web-server/: Starter.cpp  Starter.h  Starter.hpp  server_types.h
src/web-server/controllers/: Controller.cpp  Controller.hpp  Route.hpp  Router.cpp  Router.hpp
src/web-server/controllers/api/: DatasetController.cpp  DatasetController.hpp  IController.hpp  TransformationController.cpp  TransformationController.hpp
src/web-server/internal/: HttpSession.cpp  HttpSession.h  HttpSession.hpp  RestServer.cpp  RestServer.h  RestServer.hpp
